feat: use MultiDbTest for decision client tests